--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -12,5 +12,5 @@
   translation: Skills & Proficiency
 - id: summary
   translation: Career Profile
-id: publications
+- id: publications
     translation: Publications
