trying to get softskills working

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -11,6 +11,8 @@
 - id: skills
   translation: Skills & Proficiency
 - id: summary
+  translation: Softskills
+- id: summary
   translation: Career Profile
 - id: publications
   translation: Publications
