added several exp. still got to make abbreviation of mon consistant

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -1,7 +1,7 @@
 - id: education
   translation: Education
 - id: experiences
-  translation: Experiences and higher education
+  translation: Experiences
 - id: interests
   translation: Interests
 - id: language
